--- a/ARMSBackend/appsettings.json
+++ b/ARMSBackend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MainDB": "Server=localhost;Port=5432;Database=armsnewbackend;User Id=root;Password=root"
+    "MainDB": "Server=localhost;Port=5432;Database=armsnewbackend;User Id=postgres;Password=root"
   },
 
   "Logging": {
