--- a/ARMSBackend/appsettings.json
+++ b/ARMSBackend/appsettings.json
@@ -2,7 +2,6 @@
   "ConnectionStrings": {
     "MainDB": "Server=localhost;Port=5432;Database=armsnewbackend;User Id=postgres;Password=root"
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -14,6 +13,9 @@
   "JWT": {
     "Key": "SUPER KEY FOR JWT TOKEN",
     "Issuer": "localhost:4200",
-    "Audience":  "localhost:4200"
+    "Audience": "localhost:4200"
+  },
+  "APIs": {
+    "PythonForecast": "http://localhost:9000"
   }
 }
